[project]
name = "trending-paper-dashboard"
version = "0.1.0"
description = "Hugging Face Trending Paper Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.41.1",
    "huggingface_hub>=1.2.3",
    "pandas>=2.2.3",
    "tornado<6.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.1",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.ruff]
target-version = "py313"
line-length = 150
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "W",    # warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E203", # Black互換
    "E501", # line-lengthはRuff側で管理
]

[tool.ruff.lint.isort]
known-first-party = ["data_processing", "utils", "config", "exceptions"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert許可（pytest想定）
